package edu.fiuba.algo3.model;

//TODO: implementar la logica de Score
public class Score {
    // cuenta los enemigos matados
    // cuenta los creditos del jugador


}
