@startuml
top to bottom direction
skinparam linetype ortho

package "defensa"{
}

package "enemigos"{
    package "movimiento"{
    }
    package "recompensa"{
        }
    package "tipoDeAtaque"{
        }
    class Velocidad
    abstract Enemigo
}

package "excepciones"{
}
package "factory"{
}

package "juego"{
    class Juego
}

package "jugador"{
    class Jugador
    class Score
}

package "lector"{
    interface Lector << interface >>
    class LectorJSON
}

package "mapa"{
    package "direcciones"{
    }
    package "parcelas"{
    }
    class Coordenadas
    class Mapa
}

package "turno"{
   class Turnos
}

Enemigo                      --|>  "tipoDeAtaque"
Enemigo                      -->  Velocidad
"defensa" --|> "mapa"
Enemigo                     *-->  Coordenadas
Enemigo                     -->  Coordenadas
Enemigo                     *--> Danio
Enemigo                    *-->  Movimiento
Enemigo                     -->  MovimientoCamino
Enemigo                     *--> Recompensa
Enemigo                    "1" *-[#595959,plain]-> "velocidad\n1" Velocidad                  
EnemigosFactory             -[#595959,dashed]->  Arania                     : "«create»"
EnemigosFactory             -[#595959,dashed]->  EnemigoInvalidoError       : "«create»"
EnemigosFactory             -[#595959,dashed]->  Hormiga                    : "«create»"
EnemigosFactory             -[#595959,dashed]->  Lechuza                    : "«create»"
EnemigosFactory             -[#595959,dashed]->  Topo                       : "«create»"
Hormiga                     -[#595959,dashed]->  DanioSimple                : "«create»"
Hormiga                     -[#000082,plain]-^  Enemigo                    
Hormiga                     -[#595959,dashed]->  RecompensaSimple           : "«create»"
Hormiga                     -[#595959,dashed]->  Velocidad                  : "«create»"
Juego                      "1" *-[#595959,plain]-> "jugador\n1" Jugador                    
Juego                      "1" *-[#595959,plain]-> "mapa\n1" Mapa                       
Juego                      "1" *-[#595959,plain]-> "turnos\n1" Turnos                     
Jugador                     -[#595959,dashed]->  CreditosInsuficientesError : "«create»"
Jugador                    "1" *-[#595959,plain]-> "defensas\n*" Defensa                    
Jugador                    "1" *-[#595959,plain]-> "score\n1" Score                      
Jugador                     -[#595959,dashed]->  Score                      : "«create»"
Lechuza                     -[#595959,dashed]->  DanioLechuzal              : "«create»"
Lechuza                     -[#000082,plain]-^  Enemigo                    
Lechuza                     -[#595959,dashed]->  MovimientoDiagonal         : "«create»"
Lechuza                     -[#595959,dashed]->  MovimientoVertical         : "«create»"
Lechuza                     -[#595959,dashed]->  RecompensaSimple           : "«create»"
Lechuza                     -[#595959,dashed]->  Velocidad                  : "«create»"
LectorJSON                  -[#595959,dashed]->  Abajo                      : "«create»"
LectorJSON                  -[#595959,dashed]->  Coordenadas                : "«create»"
LectorJSON                  -[#008200,dashed]-^  Lector                     
LectorJSON                  -[#595959,dashed]->  Mapa                       : "«create»"
LectorJSON                  -[#595959,dashed]->  Meta                       : "«create»"
LectorJSON                  -[#595959,dashed]->  NoSePuedeLeerElMapaError   : "«create»"
LectorJSON                  -[#595959,dashed]->  NoSePuedeLeerEnemigosError : "«create»"
LectorJSON                  -[#595959,dashed]->  Pasarela                   : "«create»"
LectorJSON                  -[#595959,dashed]->  Turnos                     : "«create»"
Mapa                       "1" *-[#595959,plain]-> "enemigos\n*" Enemigo                    
Mapa                       "1" *-[#595959,plain]-> "parcelas\n*" Parcela                    
Meta                        -[#595959,dashed]->  ParcelaNoPuedeUbicarError  : "«create»"
Meta                        -[#000082,plain]-^  Pasarela                   
MovimientoCamino            -[#008200,dashed]-^  Movimiento                 
MovimientoDiagonal          -[#595959,dashed]->  Coordenadas                : "«create»"
MovimientoDiagonal          -[#008200,dashed]-^  Movimiento                 
MovimientoHorizontal        -[#595959,dashed]->  Derecha                    : "«create»"
MovimientoHorizontal        -[#008200,dashed]-^  Movimiento                 
MovimientoVertical          -[#595959,dashed]->  Abajo                      : "«create»"
MovimientoVertical          -[#008200,dashed]-^  Movimiento                 
MovimientoVertical          -[#595959,dashed]->  MovimientoHorizontal       : "«create»"
Parcela                    "1" *-[#595959,plain]-> "ubicacion\n1" Coordenadas                
ParcelasFactory             -[#595959,dashed]->  Coordenadas                : "«create»"
ParcelasFactory             -[#595959,dashed]->  Meta                       : "«create»"
ParcelasFactory             -[#595959,dashed]->  ParcelaInvalidaError       : "«create»"
ParcelasFactory             -[#595959,dashed]->  Pasarela                   : "«create»"
ParcelasFactory             -[#595959,dashed]->  Rocoso                     : "«create»"
ParcelasFactory             -[#595959,dashed]->  Tierra                     : "«create»"
Pasarela                    -[#595959,dashed]->  Derecha                    : "«create»"
Pasarela                   "1" *-[#595959,plain]-> "direccion\n1" Direccion                  
Pasarela                    -[#000082,plain]-^  Parcela                    
Pasarela                    -[#595959,dashed]->  ParcelaNoPuedeUbicarError  : "«create»"
RecompensaRandom            -[#008200,dashed]-^  Recompensa                 
RecompensaSimple            -[#008200,dashed]-^  Recompensa                 
Rocoso                      -[#000082,plain]-^  Parcela                    
Rocoso                      -[#595959,dashed]->  ParcelaNoPuedeUbicarError  : "«create»"
Tierra                      -[#000082,plain]-^  Parcela                    
Tierra                      -[#595959,dashed]->  ParcelaNoPuedeUbicarError  : "«create»"
Topo                        -[#595959,dashed]->  DanioTopal                 : "«create»"
Topo                        -[#000082,plain]-^  Enemigo                    
Topo                        -[#595959,dashed]->  RecompensaSimple           : "«create»"
Topo                        -[#595959,dashed]->  Velocidad                  : "«create»"
TorreBlanca                 -[#000082,plain]-^  Defensa                    
TorrePlateada               -[#000082,plain]-^  Defensa                    
TrampaArenosa               -[#000082,plain]-^  Defensa                    
Turnos                      -[#595959,dashed]->  TurnoInvalidoError         : "«create»"
@enduml
